<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".views.login.LoginActivity">


    <LinearLayout
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="TODO"
            android:src="@drawable/image_login" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello_sign_in_your_account"
            android:textColor="#A1887F"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="284dp"
            android:layout_height="56dp"
            android:layout_marginTop="24dp"
            app:hintEnabled="false">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email_login"
                android:layout_width="287dp"
                android:layout_height="match_parent"
                android:background="@drawable/bg_edit_text"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingEnd="16dp"
                android:peddingStart="16dp" />

        </com.google.android.material.textfield.TextInputLayout>





        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="284dp"
            android:layout_height="56dp"
            android:layout_marginTop="20dp"
            app:endIconMode="password_toggle"
            app:hintEnabled="false">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password_login"
                android:layout_width="287dp"
                android:layout_height="match_parent"
                android:background="@drawable/bg_edit_text"
                android:hint="@string/password"
                android:inputType="textEmailAddress"
                android:paddingEnd="16dp"
                android:peddingStart="16dp" />

        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/btn_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/background_transparent"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimaryDark"
            android:layout_gravity=""
            android:layout_marginTop="20dp"
            android:text="@string/forgot_password"/>


        <Button
            android:id="@+id/btn_login"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_btn_primary"
            android:text="@string/login"
            android:textColor="@color/quantum_white_100"
            android:layout_marginTop="24dp"/>
    </LinearLayout>


</ScrollView>